T2L/t2lParser.cpp

// Generated from t2l.g4 by ANTLR 4.9.3


#include "t2lListener.h"

#include "t2lParser.h"


using namespace antlrcpp;
using namespace antlr4;

t2lParser::t2lParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

t2lParser::~t2lParser() {
  delete _interpreter;
}

std::string t2lParser::getGrammarFileName() const {
  return "t2l.g4";
}

const std::vector<std::string>& t2lParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& t2lParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- StartContext ------------------------------------------------------------------

t2lParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

t2lParser::BlockContext* t2lParser::StartContext::block() {
  return getRuleContext<t2lParser::BlockContext>(0);
}


size_t t2lParser::StartContext::getRuleIndex() const {
  return t2lParser::RuleStart;
}

void t2lParser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void t2lParser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}

t2lParser::StartContext* t2lParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, t2lParser::RuleStart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(48);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

t2lParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<t2lParser::StatContext *> t2lParser::BlockContext::stat() {
  return getRuleContexts<t2lParser::StatContext>();
}

t2lParser::StatContext* t2lParser::BlockContext::stat(size_t i) {
  return getRuleContext<t2lParser::StatContext>(i);
}


size_t t2lParser::BlockContext::getRuleIndex() const {
  return t2lParser::RuleBlock;
}

void t2lParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void t2lParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

t2lParser::BlockContext* t2lParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 2, t2lParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << t2lParser::IF)
      | (1ULL << t2lParser::WHILE)
      | (1ULL << t2lParser::FOR)
      | (1ULL << t2lParser::FUNC)
      | (1ULL << t2lParser::T2L_RETURN)
      | (1ULL << t2lParser::CLASS)
      | (1ULL << t2lParser::IMPORT)
      | (1ULL << t2lParser::JIMPORT)
      | (1ULL << t2lParser::ID)
      | (1ULL << t2lParser::DOC))) != 0)) {
      setState(50);
      stat();
      setState(55);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

t2lParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

t2lParser::VarContext* t2lParser::StatContext::var() {
  return getRuleContext<t2lParser::VarContext>(0);
}

t2lParser::If_statContext* t2lParser::StatContext::if_stat() {
  return getRuleContext<t2lParser::If_statContext>(0);
}

t2lParser::While_statContext* t2lParser::StatContext::while_stat() {
  return getRuleContext<t2lParser::While_statContext>(0);
}

t2lParser::Call_statContext* t2lParser::StatContext::call_stat() {
  return getRuleContext<t2lParser::Call_statContext>(0);
}

t2lParser::Func_statContext* t2lParser::StatContext::func_stat() {
  return getRuleContext<t2lParser::Func_statContext>(0);
}

t2lParser::Class_statContext* t2lParser::StatContext::class_stat() {
  return getRuleContext<t2lParser::Class_statContext>(0);
}

t2lParser::T2l_returnContext* t2lParser::StatContext::t2l_return() {
  return getRuleContext<t2lParser::T2l_returnContext>(0);
}

t2lParser::IndexContext* t2lParser::StatContext::index() {
  return getRuleContext<t2lParser::IndexContext>(0);
}

t2lParser::For_loop_statContext* t2lParser::StatContext::for_loop_stat() {
  return getRuleContext<t2lParser::For_loop_statContext>(0);
}

t2lParser::Import_statContext* t2lParser::StatContext::import_stat() {
  return getRuleContext<t2lParser::Import_statContext>(0);
}

t2lParser::Jimport_statContext* t2lParser::StatContext::jimport_stat() {
  return getRuleContext<t2lParser::Jimport_statContext>(0);
}


size_t t2lParser::StatContext::getRuleIndex() const {
  return t2lParser::RuleStat;
}

void t2lParser::StatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStat(this);
}

void t2lParser::StatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStat(this);
}

t2lParser::StatContext* t2lParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 4, t2lParser::RuleStat);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(67);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(56);
      var();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(57);
      if_stat();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(58);
      while_stat();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(59);
      call_stat();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(60);
      func_stat();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(61);
      class_stat();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(62);
      t2l_return();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(63);
      index();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(64);
      for_loop_stat();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(65);
      import_stat();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(66);
      jimport_stat();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Class_stat_blockContext ------------------------------------------------------------------

t2lParser::Class_stat_blockContext::Class_stat_blockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

t2lParser::VarContext* t2lParser::Class_stat_blockContext::var() {
  return getRuleContext<t2lParser::VarContext>(0);
}

t2lParser::Class_statContext* t2lParser::Class_stat_blockContext::class_stat() {
  return getRuleContext<t2lParser::Class_statContext>(0);
}

t2lParser::Func_statContext* t2lParser::Class_stat_blockContext::func_stat() {
  return getRuleContext<t2lParser::Func_statContext>(0);
}


size_t t2lParser::Class_stat_blockContext::getRuleIndex() const {
  return t2lParser::RuleClass_stat_block;
}

void t2lParser::Class_stat_blockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClass_stat_block(this);
}

void t2lParser::Class_stat_blockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClass_stat_block(this);
}

t2lParser::Class_stat_blockContext* t2lParser::class_stat_block() {
  Class_stat_blockContext *_localctx = _tracker.createInstance<Class_stat_blockContext>(_ctx, getState());
  enterRule(_localctx, 6, t2lParser::RuleClass_stat_block);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(72);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case t2lParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(69);
        var();
        break;
      }

      case t2lParser::CLASS: {
        enterOuterAlt(_localctx, 2);
        setState(70);
        class_stat();
        break;
      }

      case t2lParser::FUNC:
      case t2lParser::DOC: {
        enterOuterAlt(_localctx, 3);
        setState(71);
        func_stat();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Call_statContext ------------------------------------------------------------------

t2lParser::Call_statContext::Call_statContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* t2lParser::Call_statContext::ID() {
  return getToken(t2lParser::ID, 0);
}

tree::TerminalNode* t2lParser::Call_statContext::OPAR() {
  return getToken(t2lParser::OPAR, 0);
}

t2lParser::ParamsContext* t2lParser::Call_statContext::params() {
  return getRuleContext<t2lParser::ParamsContext>(0);
}

tree::TerminalNode* t2lParser::Call_statContext::CPAR() {
  return getToken(t2lParser::CPAR, 0);
}

tree::TerminalNode* t2lParser::Call_statContext::SCOL() {
  return getToken(t2lParser::SCOL, 0);
}


size_t t2lParser::Call_statContext::getRuleIndex() const {
  return t2lParser::RuleCall_stat;
}

void t2lParser::Call_statContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCall_stat(this);
}

void t2lParser::Call_statContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCall_stat(this);
}

t2lParser::Call_statContext* t2lParser::call_stat() {
  Call_statContext *_localctx = _tracker.createInstance<Call_statContext>(_ctx, getState());
  enterRule(_localctx, 8, t2lParser::RuleCall_stat);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(t2lParser::ID);
    setState(75);
    match(t2lParser::OPAR);
    setState(76);
    params();
    setState(77);
    match(t2lParser::CPAR);
    setState(78);
    match(t2lParser::SCOL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_statContext ------------------------------------------------------------------

t2lParser::Func_statContext::Func_statContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* t2lParser::Func_statContext::FUNC() {
  return getToken(t2lParser::FUNC, 0);
}

tree::TerminalNode* t2lParser::Func_statContext::ID() {
  return getToken(t2lParser::ID, 0);
}

t2lParser::Def_paramsContext* t2lParser::Func_statContext::def_params() {
  return getRuleContext<t2lParser::Def_paramsContext>(0);
}

t2lParser::Stat_blockContext* t2lParser::Func_statContext::stat_block() {
  return getRuleContext<t2lParser::Stat_blockContext>(0);
}

tree::TerminalNode* t2lParser::Func_statContext::DOC() {
  return getToken(t2lParser::DOC, 0);
}


size_t t2lParser::Func_statContext::getRuleIndex() const {
  return t2lParser::RuleFunc_stat;
}

void t2lParser::Func_statContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc_stat(this);
}

void t2lParser::Func_statContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc_stat(this);
}

t2lParser::Func_statContext* t2lParser::func_stat() {
  Func_statContext *_localctx = _tracker.createInstance<Func_statContext>(_ctx, getState());
  enterRule(_localctx, 10, t2lParser::RuleFunc_stat);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == t2lParser::DOC) {
      setState(80);
      match(t2lParser::DOC);
    }
    setState(83);
    match(t2lParser::FUNC);
    setState(84);
    match(t2lParser::ID);
    setState(85);
    def_params();
    setState(86);
    stat_block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- T2l_returnContext ------------------------------------------------------------------

t2lParser::T2l_returnContext::T2l_returnContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* t2lParser::T2l_returnContext::T2L_RETURN() {
  return getToken(t2lParser::T2L_RETURN, 0);
}

t2lParser::ExprContext* t2lParser::T2l_returnContext::expr() {
  return getRuleContext<t2lParser::ExprContext>(0);
}

tree::TerminalNode* t2lParser::T2l_returnContext::SCOL() {
  return getToken(t2lParser::SCOL, 0);
}


size_t t2lParser::T2l_returnContext::getRuleIndex() const {
  return t2lParser::RuleT2l_return;
}

void t2lParser::T2l_returnContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterT2l_return(this);
}

void t2lParser::T2l_returnContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitT2l_return(this);
}

t2lParser::T2l_returnContext* t2lParser::t2l_return() {
  T2l_returnContext *_localctx = _tracker.createInstance<T2l_returnContext>(_ctx, getState());
  enterRule(_localctx, 12, t2lParser::RuleT2l_return);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(t2lParser::T2L_RETURN);
    setState(89);
    expr(0);
    setState(90);
    match(t2lParser::SCOL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Class_statContext ------------------------------------------------------------------

t2lParser::Class_statContext::Class_statContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* t2lParser::Class_statContext::CLASS() {
  return getToken(t2lParser::CLASS, 0);
}

std::vector<tree::TerminalNode *> t2lParser::Class_statContext::ID() {
  return getTokens(t2lParser::ID);
}

tree::TerminalNode* t2lParser::Class_statContext::ID(size_t i) {
  return getToken(t2lParser::ID, i);
}

tree::TerminalNode* t2lParser::Class_statContext::OBRACE() {
  return getToken(t2lParser::OBRACE, 0);
}

tree::TerminalNode* t2lParser::Class_statContext::CBRACE() {
  return getToken(t2lParser::CBRACE, 0);
}

tree::TerminalNode* t2lParser::Class_statContext::OPAR() {
  return getToken(t2lParser::OPAR, 0);
}

tree::TerminalNode* t2lParser::Class_statContext::CPAR() {
  return getToken(t2lParser::CPAR, 0);
}

std::vector<t2lParser::Class_stat_blockContext *> t2lParser::Class_statContext::class_stat_block() {
  return getRuleContexts<t2lParser::Class_stat_blockContext>();
}

t2lParser::Class_stat_blockContext* t2lParser::Class_statContext::class_stat_block(size_t i) {
  return getRuleContext<t2lParser::Class_stat_blockContext>(i);
}

std::vector<tree::TerminalNode *> t2lParser::Class_statContext::COMMA() {
  return getTokens(t2lParser::COMMA);
}

tree::TerminalNode* t2lParser::Class_statContext::COMMA(size_t i) {
  return getToken(t2lParser::COMMA, i);
}


size_t t2lParser::Class_statContext::getRuleIndex() const {
  return t2lParser::RuleClass_stat;
}

void t2lParser::Class_statContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClass_stat(this);
}

void t2lParser::Class_statContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClass_stat(this);
}

t2lParser::Class_statContext* t2lParser::class_stat() {
  Class_statContext *_localctx = _tracker.createInstance<Class_statContext>(_ctx, getState());
  enterRule(_localctx, 14, t2lParser::RuleClass_stat);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(t2lParser::CLASS);
    setState(93);
    match(t2lParser::ID);
    setState(104);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == t2lParser::OPAR) {
      setState(94);
      match(t2lParser::OPAR);
      setState(99);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(95);
          match(t2lParser::ID);
          setState(96);
          match(t2lParser::COMMA); 
        }
        setState(101);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
      }
      setState(102);
      match(t2lParser::ID);
      setState(103);
      match(t2lParser::CPAR);
    }
    setState(106);
    match(t2lParser::OBRACE);
    setState(110);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << t2lParser::FUNC)
      | (1ULL << t2lParser::CLASS)
      | (1ULL << t2lParser::ID)
      | (1ULL << t2lParser::DOC))) != 0)) {
      setState(107);
      class_stat_block();
      setState(112);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(113);
    match(t2lParser::CBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamsContext ------------------------------------------------------------------

t2lParser::ParamsContext::ParamsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<t2lParser::ExprContext *> t2lParser::ParamsContext::expr() {
  return getRuleContexts<t2lParser::ExprContext>();
}

t2lParser::ExprContext* t2lParser::ParamsContext::expr(size_t i) {
  return getRuleContext<t2lParser::ExprContext>(i);
}

std::vector<tree::TerminalNode *> t2lParser::ParamsContext::COMMA() {
  return getTokens(t2lParser::COMMA);
}

tree::TerminalNode* t2lParser::ParamsContext::COMMA(size_t i) {
  return getToken(t2lParser::COMMA, i);
}


size_t t2lParser::ParamsContext::getRuleIndex() const {
  return t2lParser::RuleParams;
}

void t2lParser::ParamsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParams(this);
}

void t2lParser::ParamsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParams(this);
}

t2lParser::ParamsContext* t2lParser::params() {
  ParamsContext *_localctx = _tracker.createInstance<ParamsContext>(_ctx, getState());
  enterRule(_localctx, 16, t2lParser::RuleParams);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(124);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << t2lParser::MINUS)
      | (1ULL << t2lParser::NOT)
      | (1ULL << t2lParser::OPAR)
      | (1ULL << t2lParser::OBRACE)
      | (1ULL << t2lParser::OSQUARE)
      | (1ULL << t2lParser::NEW)
      | (1ULL << t2lParser::ID)
      | (1ULL << t2lParser::INT)
      | (1ULL << t2lParser::STRING))) != 0)) {
      setState(120);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(115);
          expr(0);
          setState(116);
          match(t2lParser::COMMA); 
        }
        setState(122);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
      }
      setState(123);
      expr(0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Def_paramsContext ------------------------------------------------------------------

t2lParser::Def_paramsContext::Def_paramsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> t2lParser::Def_paramsContext::STRING() {
  return getTokens(t2lParser::STRING);
}

tree::TerminalNode* t2lParser::Def_paramsContext::STRING(size_t i) {
  return getToken(t2lParser::STRING, i);
}

std::vector<tree::TerminalNode *> t2lParser::Def_paramsContext::COMMA() {
  return getTokens(t2lParser::COMMA);
}

tree::TerminalNode* t2lParser::Def_paramsContext::COMMA(size_t i) {
  return getToken(t2lParser::COMMA, i);
}


size_t t2lParser::Def_paramsContext::getRuleIndex() const {
  return t2lParser::RuleDef_params;
}

void t2lParser::Def_paramsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDef_params(this);
}

void t2lParser::Def_paramsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDef_params(this);
}

t2lParser::Def_paramsContext* t2lParser::def_params() {
  Def_paramsContext *_localctx = _tracker.createInstance<Def_paramsContext>(_ctx, getState());
  enterRule(_localctx, 18, t2lParser::RuleDef_params);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(134);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == t2lParser::STRING) {
      setState(130);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(126);
          match(t2lParser::STRING);
          setState(127);
          match(t2lParser::COMMA); 
        }
        setState(132);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
      }
      setState(133);
      match(t2lParser::STRING);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarContext ------------------------------------------------------------------

t2lParser::VarContext::VarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* t2lParser::VarContext::ID() {
  return getToken(t2lParser::ID, 0);
}

tree::TerminalNode* t2lParser::VarContext::ASSIGN() {
  return getToken(t2lParser::ASSIGN, 0);
}

t2lParser::ExprContext* t2lParser::VarContext::expr() {
  return getRuleContext<t2lParser::ExprContext>(0);
}

tree::TerminalNode* t2lParser::VarContext::SCOL() {
  return getToken(t2lParser::SCOL, 0);
}


size_t t2lParser::VarContext::getRuleIndex() const {
  return t2lParser::RuleVar;
}

void t2lParser::VarContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar(this);
}

void t2lParser::VarContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<t2lListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar(this);
}

t2lParser::VarContext* t2lParser::var() {
  VarContext *_localctx = _tracker.createInstance<VarContext>(_ctx, getState());
  enterRule(_localctx, 20, t2lParser::RuleVar);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(143);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(136);
      match(t2lParser::ID);
      setState(137);
      match(t2lParser::ASSIGN);
      setState(138);
      expr(0);
      setState(139);
      match(t2lParser::SCOL);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(141);
      match(t2lParser::ID);
      setState(142);
      match(t2lParser::SCOL);
      break;
    }
